--- a/PhotoSharingApp/Web.config
+++ b/PhotoSharingApp/Web.config
@@ -10,10 +10,12 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
    
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
-  <connectionStrings>  
-      <clear />  
-      <add name="C:\USERS\KHAYRI\DOCUMENTS\PHOTOSHARINGDB.MDF" providerName=".NET Framework Data Provider for SQL Server" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\khayri\Documents\PhotoSharingDB.mdf;Integrated Security=True;Connect Timeout=30" />  
-    </connectionStrings>  
+  <connectionStrings>
+ <add name="PhotoSharingDB"
+ connectionString = ""
+ providerName =
+ "System.Data.SqlClient" />
+</connectionStrings>  
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
