chapter 7 ex 1  done ! route url is working

--- a/PhotoSharingApp/PhotoSharingApp.csproj
+++ b/PhotoSharingApp/PhotoSharingApp.csproj
@@ -180,6 +180,7 @@
     <Content Include="Views\Photo\Create.cshtml" />
     <Content Include="Views\Shared\_PhotoGallery.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\_MainLayout.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
