--- a/PhotoSharingApp/Web.config
+++ b/PhotoSharingApp/Web.config
@@ -75,6 +75,9 @@
     </providers>
   </entityFramework>
 <system.webServer>
+  <directoryBrowse enabled="true" />
+
+<modules runAllManagedModulesForAllRequests="true" />
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
