--- a/PhotoSharingTests/PhotoSharingTests.csproj
+++ b/PhotoSharingTests/PhotoSharingTests.csproj
@@ -40,6 +40,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.6\lib\net45\System.Web.Helpers.dll</HintPath>
       <Private>True</Private>
@@ -74,7 +75,9 @@
     </When>
     <Otherwise>
       <ItemGroup>
-        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework" />
+        <Reference Include="Microsoft.VisualStudio.QualityTools.UnitTestFramework">
+          <Private>False</Private>
+        </Reference>
       </ItemGroup>
     </Otherwise>
   </Choose>
@@ -82,12 +85,7 @@
     <Compile Include="Doubles\FakePhotoSharingContext.cs" />
     <Compile Include="PhotoControllerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\PhotoSharingApp\PhotoSharingApp.csproj">
-      <Project>{7d9b81a0-8e6a-4456-919a-cf43bc734bb9}</Project>
-      <Name>PhotoSharingApp</Name>
-    </ProjectReference>
+    <Compile Include="RoutingTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
@@ -96,7 +94,12 @@
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\PhotoSharingApp\PhotoSharingApp.csproj">
+      <Project>{7d9b81a0-8e6a-4456-919a-cf43bc734bb9}</Project>
+      <Name>PhotoSharingApp</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
