--- a/PhotoSharingApp/packages.config
+++ b/PhotoSharingApp/packages.config
@@ -25,6 +25,7 @@
   <package id="MvcSiteMapProvider.MVC5.Core" version="4.6.20" targetFramework="net452" />
   <package id="MvcSiteMapProvider.Web" version="4.6.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="System.Core" version="3.5.21022.801" targetFramework="net452" />
   <package id="System.Spatial" version="5.6.0" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0.1" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
