--- a/PhotoSharingApp/PhotoSharingApp.csproj
+++ b/PhotoSharingApp/PhotoSharingApp.csproj
@@ -165,6 +165,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Content\PhotoSharingStyles.css" />
     <Content Include="Global.asax" />
     <Content Include="packages.config" />
     <Content Include="Scripts\bootstrap.js" />
